# SurvTRACE

./: README.md  pyproject.toml  requirements.txt
checkpoints/: survtrace.pt
survtrace/: __init__.py
survtrace/src/survtrace/: model.py  train_utils.py
survtrace/tests/: test_SurvTrace.py
